# Overlay

./: .gitignore  .readthedocs.yaml  DocsView.spec  LICENSE  LinuxKeySenderServer.py  LinuxKeySenderServer.spec  Loggins.py  MinTools.py  PrintManager.py  README.md  assets.qrc  assets_rc.py  build.cmd  build_cli.cmd  config.toml  core.py  default_config.toml  icons.qrc  icons_rc.py  main.py  main.spec  main_qml.py  output.yml  overlay.spec  overlayLinuxFakeInput.py  overlay_cli.py  overlay_cli.spec  pluginControl.py  pyproject.toml  test.py  test0306.py  test0406.py  test0706.py  test2.py  test5.py
.github/workflows/: release.yml
API/: CLI.py  PlugSetting.py  __init__.py  cli.py  config.py  core.py  i_addons.py  pluginDataLoader.py  pluginSetting.py  pluginSettringWidget.py
API/BackendControl/: __init__.py  backed.py
API/BackgroundWorker/: dumper.py  manager.py
API/DraggableWindow/: __init__.py  base_window.py  dumper.py  qml.py
API/OWidget/: base_window.py  pluginSettingWidget.py
API/OWindow/: base_window.py  pluginSettingWindow.py  (+1 more)
APIService/: ThemeController.py  __init__.py  clamps.py  colorize.py  dumper.py  messageBox.py  path_control_qt.py  path_controls.py  platformCurrent.py  qWebSockets.py  qtStorageControls.py  storageControls.py  theme.py  themeCLI.py  themeController.py  tools_folder.py  webControls.py
ApiPlugins/: pluginControl.py  pluginItems.py  preloader.py  widgetPreloader.py  windowPreloader.py
ColorControl/: defaultTheme.py  theme.py  themeController.py
Common/: core.py
Docs/: DocsView.py  README.md  index.md  index.rst
GlobalShortcutControl/: __init__.py  _wayland_key_map.py  waylandHotkeyHandler.py  x11HotkeyHandler.py
PathControl/: __init__.py  jloader.py  overlayAddonsLoader.py  pluginLoader.py  qtStorageControls.py  storageControls.py  themeLoader.py  tools_folder.py
QmlApi/: legacyController.py
QmlApiService/: factoryWindows.py
QmlService/: providers.py
Service/: AnchorLayout.py  EventFiltes.py  KeyCombination.py  Loggins.py  defaultTheme.py  gifSplashScreen.py  globalContext.py  importer_overlayaddons.py  internalization.py  logs.py  metadatas.py  pluginControl.py  pluginItems.py  versionControl.py  webSocket.py
StubGen/: pyproject.toml  setup.py
StubGen/StubGen/: __init__.py  generator.py  importUsageAnalyzer.py  initStubVisitor.py  smartStubGenerator.py  smartStubVisitor.py
UIWidget/: mainWindow.py
assets/: metadata.toml
configs/: config.ini
docs/: README.md  api.rst  conf.py  index.rst  requirements.txt
futures/: rope.py  test0201.py  test0810.py  test1209.py  test1309.py  test1401.py  test3110.py
overlay_sdk/: oapi.pyi  setup.py
qml/: ImageButton.qml  RoundButton.qml  SettingWindow.qml  SquircleButton.qml  main.qml
scripts/: auto_build_stubs.py  build.cmd  build_cli.cmd  check_deps.py  overlay.spec  overlay_cli.spec
src/: assets.qrc  oapi.py  overlay.py  overlay_cli.py
tests/: test.py  test0307.py  test0508.py  test0806.py  test0906.py  test1206c.py  test1206s.py  test1209.py  test1607.py  test2.py  test2307.py  test2406.py  test2507.py  test2607.py  test2608.py  test2808.py  test2906.py  test2907.py  test3007.py  test3008.py  test5.py
tools_folder/: __init__.py  initer.py
uis/: dialogSettings.ui  dialogSettingsTemplate.ui  dialogSettingsTemplate_ui.py  dialogSettings_ui.py  main.ui  main_ui.py  settings.ui  settings_ui.py
utils/: AnchorLayout.py  __init__.py  dumper.py  openFolderExplorer.py
(+238 files in other folders)
