[build-system]
requires = ["setuptools>=45", "wheel", "setuptools-scm"]
build-backend = "setuptools.build_meta"

[project]
name = "StubGen"
version = "0.1.2"
description = "Генератор и упаковщик stub-файлов для установки через pip"
authors = [
    {name = "SnayperTihCreator", email = "your.email@example.com"},
]
dependencies = []
requires-python = ">=3.11"

[project.scripts]
stubgen = "StubGen.generator:main"

[tool.setuptools.packages.find]
where = ["."]
include = ["StubGen*"]